--- a/phanmem/index.html
+++ b/phanmem/index.html
@@ -37,14 +37,14 @@
 
                 </div>
 
-                <div class="col bg-white  " style=" height: 225px;color:white"><br>
+                <!-- <div class="col bg-white  " style=" height: 225px;color:white"><br>
                     <h3 >LED 2</h3>
                     <img id="led2" style="width:75px" src="./img/ledtat.png"><br><br>
                     <button type="button" class="btn btn-success" > ON</button>
                     <button type="button" class="btn btn-info" >OFF</button>
 
-                </div>
-                <!-- <div class="col bg-light" id="batDen2" style=" height: 225px;"><br>
+                </div> -->
+                <div class="col bg-light" id="batDen2" style=" height: 225px;"><br>
                     <h3>LED 2</h3>
                     <img id="led2" style='width:75px' src="./img/ledtat.png"><br><br>
                     <label class="switch">
@@ -52,12 +52,12 @@
                         <span class="slider round" ></span>
                     </label>
 
-                </div> -->
+                </div>
 
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <!-- <script src="/socket.io/socket.io.js"></script> -->
+        <script src="/socket.io/socket.io.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.3/socket.io.min.js"></script>
         <script src="./JS/bieuDo.js"></script>
         <script src="./JS/doiMau.js"></script>
