--- a/phanmem/index.html
+++ b/phanmem/index.html
@@ -12,14 +12,17 @@
         <div class="row">
             <div class="col" id="nhietDo">
                 <h2>NHIỆT ĐỘ</h2>
+                <img src="./img/temp1.png" style="width: 75px;" alt="temp">
                 <p id="randomNhietDo" onchange="fsRandomNhietDo()"> </p>
             </div>
             <div class="col" id="doAm">
                 <h2>ĐỘ ẨM</h2>
+                <img src="./img/viscosity.png" style="width: 75px;" alt="hum">
                 <p id="randomDoAm" onchange="fsRandomDoAm()" > </p>
             </div>
             <div class="col" id="anhSang">
                 <h2>ÁNH SÁNG</h2>
+                <img src="./img/2779262.png" style="width: 75px;" alt="hum">
                 <p id="randomAnhSang" onchange="fsRandomAnhSang()"> </p>
             </div>
         </div>
